# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package Detector
#------------------------------------------------------------------------

Package author: Mikhail S. Dubrovin

Please describe any modifications that you made to the package in the
reverse time order.

==============

Tag: V00-03-73
2016-06-14 Mikhail S. Dubrovin
- fix typo in app/det_ndarr_average

Tag: V00-03-72
2016-06-14 Mikhail S. Dubrovin
- AreaDetector.py and PyDetectorAccess.py - change all mask dtype to uint8 (PSAS-139)

Tag: V00-03-71
2016-06-10 Christopher O'Grady
- Add DdlDetector types for XCS-BEAMMON-01 and EOrbits BLD.

Tag: V00-03-70
2016-06-10 Christopher O'Grady
- Add new TDCDetector for acqiris TDC

Tag: V00-03-69
2016-06-09 Mikhail S. Dubrovin
- PyDetectorAccess - hide print statements under control of pbits

Tag: V00-03-68
2016-05-20 Mikhail S. Dubrovin
- Code refactoring:
	- move GlobalUtils.table_from_cspad_ndarr method to pyimgalgos
	- update ex_ndarray_from_image.py

Tag: V00-03-67
2016-05-19 Mikhail S. Dubrovin
- AreaDetector - add methods coords_xy, coords_xyz, image_xaxis, image_yaxis, update ex_all_dets.py (PSAS-139)
M       AreaDetector.py
M       PyDetectorAccess.py
M       src/PyDetectorAccess.py

Tag: V00-03-66
2016-05-18 Mikhail S. Dubrovin
- correct comments for word "bond"

Tag: V00-03-65
2016-05-18 Mikhail S. Dubrovin
- AreaDetector - add methods mask_edges, mask_neighbors (PSAS-139)

Tag: V00-03-64
2016-05-17 Mikhail S. Dubrovin
- add mask of unbonded pixel with eight neighbors
M       AreaDetector.py
M       PyDetectorAccess.py

Tag: V00-03-63
2016-05-17 Mikhail S. Dubrovin
- det_ndarr_raw_proc - common mode parameters tuning for pnccd

Tag: V00-03-62
2016-05-16 Christopher O'Grady
- Try to clarify doc-strings related to masks

Tag: V00-03-61
2016-05-16 Mikhail S. Dubrovin
- det_ndarr_raw_proc - add evaluation of common mode parameters for a few detectors (PSAS-139)